force-app/main/default/objects/Product2/fields/ActivePrinciple__c.field-meta.xml
<CustomField>
    <fullName>ActivePrinciple__c</fullName>
    <label>Principio Ativo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>