force-app/main/default/objects/Product2/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <formula>Family__r.ExternalId__c</formula>
    <label>Categoria Ecommerce</label>
    <type>Text</type>
</CustomField>