force-app/main/default/objects/Product2/fields/CertificateUrl__c.field-meta.xml
<CustomField>
    <fullName>CertificateUrl__c</fullName>
    <description>Campo que armazena a URL do certificado do produto.</description>
    <inlineHelpText>Campo que armazena a URL do certificado do produto.</inlineHelpText>
    <label>URL do Certificado</label>
    <type>Url</type>
</CustomField>