force-app/main/default/objects/Product2/fields/ConvertWeightBags__c.field-meta.xml
<CustomField>
    <fullName>ConvertWeightBags__c</fullName>
    <defaultValue>60</defaultValue>
    <inlineHelpText>Conversão para envio da Commodity de Barter para o SAP</inlineHelpText>
    <label>Conversão (Kg X Sacas)</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>