force-app/main/default/objects/Product2/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Família de Produto</label>
    <referenceTo>Family__c</referenceTo>
    <relationshipLabel>Produtos</relationshipLabel>
    <relationshipName>Product2s</relationshipName>
    <type>Lookup</type>
</CustomField>