force-app/main/default/objects/Product2/fields/FamilyName__c.field-meta.xml
<CustomField>
    <fullName>FamilyName__c</fullName>
    <description>Campo que armazena o nome da família do produto.</description>
    <formula>Family__r.Name</formula>
    <inlineHelpText>Campo que armazena o nome da família do produto.</inlineHelpText>
    <label>Nome da Família</label>
    <type>Text</type>
</CustomField>