force-app/main/default/objects/Product2/fields/GrossWeightUnity__c.field-meta.xml
<CustomField>
    <fullName>GrossWeightUnity__c</fullName>
    <label>Unidade de Medida do Peso Bruto</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KG</fullName>
            </value>
            <value>
                <fullName>TO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>