force-app/main/default/objects/Product2/fields/InstructionsUrl__c.field-meta.xml
<CustomField>
    <fullName>InstructionsUrl__c</fullName>
    <description>Campo que armazena a URL de instruções do produto.</description>
    <inlineHelpText>Campo que armazena a URL de instruções do produto.</inlineHelpText>
    <label>URL de instruções</label>
    <type>Url</type>
</CustomField>