force-app/main/default/objects/Product2/fields/IPI__c.field-meta.xml
<CustomField>
    <fullName>IPI__c</fullName>
    <label>IPI</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>