force-app/main/default/objects/Product2/fields/LabelUrl__c.field-meta.xml
<CustomField>
    <fullName>LabelUrl__c</fullName>
    <description>Campo que armazena a URL do rótulo ( label ) do produto.</description>
    <inlineHelpText>Campo que armazena a URL do rótulo ( label ) do produto.</inlineHelpText>
    <label>URL do rótulo</label>
    <type>Url</type>
</CustomField>