force-app/main/default/objects/Product2/fields/Packing__c.field-meta.xml
<CustomField>
    <fullName>Packing__c</fullName>
    <label>Embalagem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>