force-app/main/default/objects/Product2/fields/PrescriptionRequired__c.field-meta.xml
<CustomField>
    <fullName>PrescriptionRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que define se o produto precisa de prescrição obrigatória.</description>
    <inlineHelpText>Campo que define se o produto precisa de prescrição obrigatória.</inlineHelpText>
    <label>Prescrição Obrigatória?</label>
    <type>Checkbox</type>
</CustomField>