force-app/main/default/objects/Product2/fields/ProductNameKey__c.field-meta.xml
<CustomField>
    <fullName>ProductNameKey__c</fullName>
    <label>Nome do Produto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>