force-app/main/default/objects/Product2/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <label>Tipo de Produto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABF</fullName>
                <label>Resíduo</label>
            </value>
            <value>
                <fullName>BUND</fullName>
                <label>Produto do pacote</label>
            </value>
            <value>
                <fullName>CBAU</fullName>
                <label>Unidade compatível</label>
            </value>
            <value>
                <fullName>CH00</fullName>
                <label>Administr.contratos CH</label>
            </value>
            <value>
                <fullName>CONT</fullName>
                <label>Recipiente KANBAN</label>
            </value>
            <value>
                <fullName>COUP</fullName>
                <label>Cupom</label>
            </value>
            <value>
                <fullName>DIEN</fullName>
                <label>Prestação de serviços</label>
            </value>
            <value>
                <fullName>EPA</fullName>
                <label>Pacote do equipamento</label>
            </value>
            <value>
                <fullName>ERSA</fullName>
                <label>Peças de reposição</label>
            </value>
            <value>
                <fullName>FERT</fullName>
                <label>Produto acabado</label>
            </value>
            <value>
                <fullName>FFFC</fullName>
                <label>Classe form-fit-function</label>
            </value>
            <value>
                <fullName>FGTR</fullName>
                <label>Bebidas</label>
            </value>
            <value>
                <fullName>FHMI</fullName>
                <label>Meio auxiliar de produção</label>
            </value>
            <value>
                <fullName>FOOD</fullName>
                <label>Prod.alim.(excl.prd.per.)</label>
            </value>
            <value>
                <fullName>FRIP</fullName>
                <label>Produtos perecíveis</label>
            </value>
            <value>
                <fullName>GBRA</fullName>
                <label>ETM material utilizável</label>
            </value>
            <value>
                <fullName>HALB</fullName>
                <label>Produto semiacabado</label>
            </value>
            <value>
                <fullName>HAWA</fullName>
                <label>Produto comercializável</label>
            </value>
            <value>
                <fullName>HERB</fullName>
                <label>Material substituível</label>
            </value>
            <value>
                <fullName>HERS</fullName>
                <label>Peça de fabricante</label>
            </value>
            <value>
                <fullName>HIBE</fullName>
                <label>Mat.aux./de consumo</label>
            </value>
            <value>
                <fullName>IBAU</fullName>
                <label>Conjunto de manutenção</label>
            </value>
            <value>
                <fullName>INTR</fullName>
                <label>Intramaterial</label>
            </value>
            <value>
                <fullName>KMAT</fullName>
                <label>Materiais configuráveis</label>
            </value>
            <value>
                <fullName>LEER</fullName>
                <label>Vasilhame</label>
            </value>
            <value>
                <fullName>LEIH</fullName>
                <label>Embalagem retornável</label>
            </value>
            <value>
                <fullName>LGUT</fullName>
                <label>Vasilhame admin.mercad.</label>
            </value>
            <value>
                <fullName>MAT</fullName>
                <label>Material geral</label>
            </value>
            <value>
                <fullName>MODE</fullName>
                <label>Moda (sazonal)</label>
            </value>
            <value>
                <fullName>MPO</fullName>
                <label>Obj.planej.material</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>