force-app/main/default/objects/Product2/fields/RegisterNumber__c.field-meta.xml
<CustomField>
    <fullName>RegisterNumber__c</fullName>
    <label>Numero de Registro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>