force-app/main/default/objects/Product2/fields/RemoveFreightValue__c.field-meta.xml
<CustomField>
    <fullName>RemoveFreightValue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remover Valor de Frete?</label>
    <type>Checkbox</type>
</CustomField>