force-app/main/default/objects/Product2/fields/SalesOrganizationStatus__c.field-meta.xml
<CustomField>
    <fullName>SalesOrganizationStatus__c</fullName>
    <label>Status organização de Vendas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Removida</fullName>
            </value>
            <value>
                <fullName>Adicionada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>